[TW#16875051] Fix styles of overlapping elements with other components

--- a/styles/scss/data-display/_ins-filter.scss
+++ b/styles/scss/data-display/_ins-filter.scss
@@ -56,7 +56,7 @@ ins-filter {
     position: absolute;
     min-width: 656px;
     padding: 8px;
-    z-index: 2;
+    z-index: 3;
 
     &.active {
       display: block;
