--- a/styles/scss/data-entry/_ins-radio-checkbox.scss
+++ b/styles/scss/data-entry/_ins-radio-checkbox.scss
@@ -40,7 +40,7 @@ ins-radio {
       cursor: pointer;
       display: inline-block;
       outline: none;
-      z-index: 990;
+      z-index: 2;
       border-radius: 1px;
       top: 2px;
 
